--- a/Family_Tree_DNA.mw
+++ b/Family_Tree_DNA.mw
@@ -1,5 +1,5 @@
 [[ofbeelding:FamilyTreeDNA Corporate Headquarters, Houston, Texas (Family Tree DNA Testing) (46791839914).jpg|thumb|400px|Heufdgebouw in Houston]]
-'''Family Tree DNA''' (Ok wal FTDNA) is een bedrief waoras ie oe [[DNA]] kunt laoten testen. Et bedrief zit in [[Houston]] in [[Texas]]. Et bedrief test op [[autosomaol DNA]], [[Y-DNA]] en [[mitochondriaal DNA]]. In [[Europa]] is et et miest gebruukte meniere um autosomaol DNA te laoten testen, in de hiele wereld stiet et bedrief op plek veere. Veur Y-DNA en mitochondriaal DNA is et et miest gebruukte bedrief in de wereld. De gegeavensbank van et bedrief hef meer as twie miljoen gegeavens van klanten.
+'''Family Tree DNA''' (Ok wal FTDNA) is een bedrief waoras ie oe [[DNA]] kunt laoten testen. Et bedrief zit in [[Houston]] in [[Texas]]. Et bedrief test op [[autosomaol DNA]], [[Y-DNA]] en [[mitochondriaal DNA]]. In [[Europa]] is et et miest gebruukte bedrief um oe autosomaol DNA te laoten testen, in de hiele wereld stiet et bedrief op plek veere. Veur Y-DNA en mitochondriaal DNA is et et miest gebruukte bedrief in de wereld. De gegeavensbank van et bedrief hef meer as twie miljoen gegeavens van klanten.
 
 == Verwiezing ==
 * [https://www.familytreedna.com/ Webstea van et bedrief]
